--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -1,139 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}Main Page{% endblock %}
+
+{% block head %}
+    {{ block.super }}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <link rel="stylesheet" href="{% static 'main_page/landing_page.css' %}">
+{% endblock %}
 
-        body {
-            background-color: rgb(183, 123, 239);
-            padding-top: 80px; /* Space for fixed navbar */
-        }
-
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: white;
-            padding: 1rem 2rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 1000;
-        }
-
-        .navbar-logo {
-            display: flex;
-            align-items: center;
-        }
-
-        .navbar-logo img {
-            height: 80px;
-            width: auto;
-        }
-
-        .navbar-buttons {
-            display: flex;
-            gap: 1rem;
-        }
-
-        .navbar-btn {
-            background-color: transparent;
-            color: #07454f;
-            border: none;
-            padding: 0.75rem 1rem;
-            cursor: pointer;
-            font-size: 17px;
-            font-weight: normal;
-            transition: all 0.3s ease;
-            text-decoration: none;
-        }
-
-        .navbar-btn:hover {
-            font-weight: bold;
-            font-size: 16px;
-            transform: scale(1.05);
-        }
-
-        .navbar-btn:active {
-            color: #555;
-        }
-
-        .welcome_image {
-            margin: 0.75rem;
-            margin-right: 0;
-            float: right;
-            width: 55%;
-            height: auto;
-        }
-
-        .welcome_paragraph {
-            float: left;
-            width: 40%;  /* Takes up left half of the screen */
-            padding: 2rem;
-            margin-top: 2rem;
-        }
-
-        .welcome_paragraph h1 {
-            color: white;
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            font-family: 'Caprasimo', 'Comic Sans MS';
-            font-style: normal;
-            font-weight: 400;
-        }
-
-        .welcome_paragraph p {
-            color: white;
-            font-size: 1.2rem;
-            line-height: 1.6;
-            font-family: 'Caprasimo', 'Comic Sans MS';
-            font-style: normal;
-            font-weight: 10;
-        }
-
-    </style>
-</head>
-<body>
-    {% load static %}
-    <nav class="navbar">
-        <!-- Left side: Logo/Image -->
-        <div class="navbar-logo">
-            <a href="{% url 'main_page' %}">
-                <img src="{% static 'main_page/images/VetLogo.png' %}" alt="Logo" onclick="">
-            </a>
-        </div>
-
-        <!-- Right side: 9 Buttons -->
-        <div class="navbar-buttons">
-            <a href="{% url 'main_page' %}" class="navbar-btn">Home</a>
-            <a href="#" class="navbar-btn">About</a>
-            <a href="#" class="navbar-btn">Services</a>
-            <a href="#" class="navbar-btn">Portfolio</a>
-            <a href="#" class="navbar-btn">Team</a>
-            <a href="#" class="navbar-btn">Blog</a>
-            <a href="#" class="navbar-btn">Contact</a>
-            <a href="#" class="navbar-btn">Login</a>
-            <a href="#" class="navbar-btn">Sign Up</a>
-        </div>
-    </nav>
-
+{% block content %}
     <img src="{% static 'main_page/images/ImageForVeterinary.png' %}" class="welcome_image" alt="Pets Posing" width="1000" >
     <div class="welcome_paragraph">
         <h1>Bienvenido a Amigos Peludos</h1>
         <p>La clinica veterinaria con mas trayectoria y exitos en Medellin</p><br>
         <p>Estamos disponibles para ti 24/7</p>
     </div>
-</body>
-</html>
+{% endblock %}
