Modified the navbar buttons

--- a/main_page/templates/navbar.html
+++ b/main_page/templates/navbar.html
@@ -13,13 +13,11 @@
 
     <div class="navbar-buttons">
         <a href="{% url 'main_page' %}" class="navbar-btn">Home</a>
-        <a href="#" class="navbar-btn">About</a>
-        <a href="#" class="navbar-btn">Services</a>
-        <a href="#" class="navbar-btn">Portfolio</a>
-        <a href="#" class="navbar-btn">Team</a>
-        <a href="#" class="navbar-btn">Blog</a>
-        <a href="#" class="navbar-btn">Contact</a>
-        <a href="#" class="navbar-btn">Login</a>
-        <a href="#" class="navbar-btn">Sign Up</a>
+        <a href="#" class="navbar-btn">Mascotas</a>
+        <a href="#" class="navbar-btn">Usuarios</a>
+        <a href="#" class="navbar-btn">Citas</a>
+        <a href="#" class="navbar-btn">Medicamentos</a>
+        <a href="#" class="navbar-btn">Sobre nosotros</a>
+        <a href="#" class="navbar-btn">Contacto</a>
     </div>
 </nav>
