Added special css for the base class

--- a/main_page/templates/base.html
+++ b/main_page/templates/base.html
@@ -6,6 +6,7 @@
     {% load static %}
 
     <link rel="stylesheet" href="{% static 'main_page/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'main_page/base.css' %}">
     <title>{% block title %}My Site{% endblock %}</title>
     {% block head %}
     {% endblock %}
