Changed font from navbar

--- a/main_page/static/main_page/navbar_style.css
+++ b/main_page/static/main_page/navbar_style.css
@@ -37,6 +37,8 @@
     font-weight: normal;
     transition: all 0.3s ease;
     text-decoration: none;
+    font-family: 'Caprasimo', 'Comic Sans MS';
+    font-weight: 10;
 }
 
 .navbar-btn:hover {
