changed the name of the imported css file

--- a/users/templates/users/users_landing.html
+++ b/users/templates/users/users_landing.html
@@ -4,7 +4,7 @@
 {% block title %}Users{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'common/content_page.css' %}">
+<link rel="stylesheet" href="{% static 'common/landing_page.css' %}">
 {% endblock %}
 
 {% block content %}
