--- a/users/templates/users/register_user.html
+++ b/users/templates/users/register_user.html
@@ -11,10 +11,20 @@
 <div class="register-container">
     <h1>Register User</h1>
     <form method="POST">
-        <!-- TODO make the form prettier -->
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
+        {% for field in form %}
+            <div class="form-group">
+                {{ field.label_tag }}
+                {{ field }}
+                {% if field.help_text %}
+                    <small class="help-text">{{ field.help_text }}</small>
+                {% endif %}
+                {% for error in field.errors %}
+                    <p class="error-text">{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
+        <button type="submit" class="submit-btn">Save</button>
     </form>
 </div>
 
