Renamed some urls tomake more sence

--- a/users/templates/users/users_landing.html
+++ b/users/templates/users/users_landing.html
@@ -13,7 +13,7 @@
     <div class="options-container">
         <a class="option" href="{% url 'all_users' %}">See all users</a>
         <a class="option" href="{% url 'register_user' %}">Register user</a>
-        <a class="option" href="{% url 'particular_user' %}">Search particular user</a>
+        <a class="option" href="{% url 'search_one_user' %}">Search particular user</a>
     </div>
 </div>
 {% endblock %}
