--- a/users/templates/users/particular_user_page.html
+++ b/users/templates/users/particular_user_page.html
@@ -4,8 +4,16 @@
 {% block title %}Register User{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'common/particular_object_page.css' %}">
+<link rel="stylesheet" href="{% static 'common/object_page.css' %}">
 {% endblock %}
-
+<div class="object-container">
+    <h1>User {{ user.name }}</h1>
+    <div class="object-group">
+        {{ user.phone_number }}
+    </div>
+    <div class="object-group">
+        {{ user.address }}
+    </div>
+</div>
 {% block content %}
 {% endblock %}
