moving each user template, and converting it to a general template for all the objects

--- a/common/static/common/all_page.css
+++ b/common/static/common/all_page.css
@@ -48,11 +48,7 @@
     text-overflow: ellipsis;
 }
 
-.name {
+.item {
     font-weight: bold;
     color: #4a4a4a;
-}
-
-.phone, .user-address {
-    color: #7a7a7a;
 }
