--- a/common/static/common/particular_object_page.css
+++ b/common/static/common/particular_object_page.css
@@ -7,6 +7,13 @@
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
 }
 
+.object-container h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #333;
+    font-weight: 600;
+}
+
 .object-group {
     display: flex;
     flex-direction: column;
