We now have pets page

--- a/main_page/templates/navbar.html
+++ b/main_page/templates/navbar.html
@@ -13,7 +13,7 @@
 
     <div class="navbar-buttons">
         <a href="{% url 'main_page' %}" class="navbar-btn">Home</a>
-        <a href="#" class="navbar-btn">Mascotas</a>
+        <a href="{% url 'pets_landing_page' %}" class="navbar-btn">Mascotas</a>
         <a href="{% url 'users_landing_page' %}" class="navbar-btn">Usuarios</a>
         <a href="#" class="navbar-btn">Citas</a>
         <a href="#" class="navbar-btn">Medicamentos</a>
