--- a/main_page/templates/navbar.html
+++ b/main_page/templates/navbar.html
@@ -15,7 +15,7 @@
         <a href="{% url 'main_page' %}" class="navbar-btn">Home</a>
         <a href="{% url 'pets_landing_page' %}" class="navbar-btn">Mascotas</a>
         <a href="{% url 'users_landing_page' %}" class="navbar-btn">Usuarios</a>
-        <a href="#" class="navbar-btn">Citas</a>
+        <a href="{% url 'appointments_landing_page' %}" class="navbar-btn">Citas</a>
         <a href="#" class="navbar-btn">Medicamentos</a>
         <a href="#" class="navbar-btn">Sobre nosotros</a>
         <a href="#" class="navbar-btn">Contacto</a>
