Now we have the surgery page

--- a/main_page/templates/navbar.html
+++ b/main_page/templates/navbar.html
@@ -16,7 +16,7 @@
         <a href="{% url 'pets_landing_page' %}" class="navbar-btn">Mascotas</a>
         <a href="{% url 'users_landing_page' %}" class="navbar-btn">Usuarios</a>
         <a href="{% url 'appointments_landing_page' %}" class="navbar-btn">Citas</a>
-        <a href="#" class="navbar-btn">Medicamentos</a>
+        <a href="{% url 'surgeries_landing_page' %}" class="navbar-btn">Cirugias</a>
         <a href="#" class="navbar-btn">Sobre nosotros</a>
         <a href="#" class="navbar-btn">Contacto</a>
     </div>
