--- a/common/static/common/landing_page.css
+++ b/common/static/common/landing_page.css
@@ -1,7 +1,9 @@
 .main_info {
-    margin-top: 0;
-    margin-left: 20%;
-    margin-right: 20%;
+    position: fixed;
+    top: 80px;
+    left: 20%;
+    right: 20%;
+    margin: 0; 
     display: flex;
     flex-direction: column; 
     justify-content: flex-start; 
@@ -11,6 +13,8 @@
     background-color: white;
     box-sizing: border-box;
     padding-top: 3rem;
+    overflow-y: auto; 
+    z-index: 1000; 
 }
 
 .welcome_image {
@@ -52,10 +56,12 @@
 }
 
 .card {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1.25rem 1.5rem;
+    margin-bottom: 1rem;
     background-color: white;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
