--- a/common/templates/common/edit.html
+++ b/common/templates/common/edit.html
@@ -17,6 +17,9 @@
         {% for field in form %}
             <div class="form-group">
                 {{ field.label_tag }}
+                {% if field.help_text %}
+                    <small class="help-text">{{ field.help_text }}</small>
+                {% endif %}
                 {{ field }}
                 {% if field.errors %}
                     {% for error in field.errors %}
@@ -24,6 +27,7 @@
                     {% endfor %}
                 {% endif %}
             </div>
+            <br>
         {% endfor %}
         
         <button type="submit" class="submit-btn">Save Changes</button>
