--- a/main_page/templates/navbar.html
+++ b/main_page/templates/navbar.html
@@ -18,6 +18,6 @@
         <a href="{% url 'appointments_landing_page' %}" class="navbar-btn">Citas</a>
         <a href="{% url 'surgeries_landing_page' %}" class="navbar-btn">Cirugias</a>
         <a href="#" class="navbar-btn">Medicinas</a>
-        <a href="#" class="navbar-btn">Sobre nosotros</a>
+        <a href="#" class="navbar-btn">Nuestros Veterinarios</a>
     </div>
 </nav>
