Added the medications views and urls

--- a/main_page/templates/navbar.html
+++ b/main_page/templates/navbar.html
@@ -17,7 +17,7 @@
         <a href="{% url 'users_landing_page' %}" class="navbar-btn">Usuarios</a>
         <a href="{% url 'appointments_landing_page' %}" class="navbar-btn">Citas</a>
         <a href="{% url 'surgeries_landing_page' %}" class="navbar-btn">Cirugias</a>
-        <a href="#" class="navbar-btn">Medicinas</a>
+        <a href="{% url 'medications_landing_page' %}" class="navbar-btn">Medicinas</a>
         <a href="#" class="navbar-btn">Nuestros Veterinarios</a>
     </div>
 </nav>
