Changed the ammount of info showed in the main page and in the particular page

--- a/common/templates/common/landing.html
+++ b/common/templates/common/landing.html
@@ -16,7 +16,7 @@
     <div class="cards-list">
         {% for object in objects %}
             <a href="{% url base_url object.id %}" class="card">
-                {% for attribute in object.to_dict.values %}
+                {% for attribute in object.basic_info.values %}
                     <span class="item">{{ attribute }}</span>
                 {% endfor %}
             </a>
