--- a/common/templates/common/particular.html
+++ b/common/templates/common/particular.html
@@ -17,8 +17,11 @@
                 <div>{{ attribute }}</div>
             </div>
         {% endfor %}
-        <a href="{% url edit_url object.id %}" class="submit-btn" style="margin-top: 2rem;">Edit</a>
+        {% if register_appointment %}
+            <a href="{% url 'register_appointment' object_id %}" class="submit-btn" style="margin-top: 1rem; background-color: #b39ddb;">Get an appointment</a>
+        {% endif %}
         <a href="{% url 'main_page' %}" class="submit-btn" style="margin-top: 1rem; background-color: #b39ddb;">Go to main page</a>
+        <a href="{% url edit_url object.id %}" class="submit-btn" style="margin-top: 2rem;">Edit</a>
         <form action="{% url delete_url object.id %}" method="GET" style="display: inline;">
             {% csrf_token %}
             <button type="submit" class="submit-btn" style="margin-top: 1rem; background-color: red;">
