Now you can download the csvs

--- a/common/templates/common/landing.html
+++ b/common/templates/common/landing.html
@@ -14,6 +14,7 @@
         {% if can_create %}
             <a class="option" href="{% url register_url %}">Register {{ object_name }}</a>
         {% endif %}
+        <a class="option" href="{% url download_url %}">Download data</a>
 
         {% if is_annotation %}
             <a class="option" href="{% url register_url appointment_id %}">Create {{ object_name }}</a>
