Solved last bug with the annotations_appointment landing_page

--- a/common/templates/common/landing.html
+++ b/common/templates/common/landing.html
@@ -14,7 +14,9 @@
         {% if can_create %}
             <a class="option" href="{% url register_url %}">Register {{ object_name }}</a>
         {% endif %}
+        {% if not is_annotation %}
         <a class="option" href="{% url download_url %}">Download data</a>
+        {% endif %}
 
         {% if is_annotation %}
             <a class="option" href="{% url register_url appointment_id %}">Create {{ object_name }}</a>
